# harbor-agents

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.github/workflows/: publish.yml  tests.yml
examples/word_elicitation_task/: instruction.md  task.toml
examples/word_elicitation_task/environment/: Dockerfile
examples/word_elicitation_task/tests/: judge.py  test.sh
skills/example-skill/: SKILL.md
src/harbor_agent/: __init__.py
src/harbor_agent/multi_turn/: __init__.py  agent.py  claude_sdk_simulated_user.py  simulated_user.py
src/harbor_agent/skilled_claude/: __init__.py  agent.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  test_harbor_run.py  test_multi_turn.py
tests/unit/: __init__.py  test_agent.py  test_claude_sdk_simulated_user.py  test_multi_turn.py
