[project]
name = "harbor-agents"
version = "0.1.0"
description = "Collection of Harbor agents for AI evaluation"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "harbor",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "ruff",
    "mypy",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/harbor_agent"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: marks tests as integration tests (require Harbor setup and API keys)",
]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_ignores = false
strict = true

[[tool.mypy.overrides]]
module = "harbor.*"
ignore_missing_imports = true
